[gd_scene load_steps=7 format=2]

[ext_resource path="res://scenes/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/background/16848.jpg" type="Texture" id=3]
[ext_resource path="res://scripts/Main.gd" type="Script" id=4]
[ext_resource path="res://scripts/Score.gd" type="Script" id=5]
[ext_resource path="res://scenes/Border.tscn" type="PackedScene" id=6]
[ext_resource path="res://scripts/Asteroids.gd" type="Script" id=7]

[node name="Main" type="Node"]
script = ExtResource( 4 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 1.92738, 1.94784 )
texture = ExtResource( 3 )
centered = false

[node name="Border" parent="." instance=ExtResource( 6 )]
position = Vector2( 23.193, 52.65 )
scale = Vector2( 1.368, 1.302 )
collision_layer = 3
collision_mask = 3

[node name="Asteroids" type="Node" parent="."]
script = ExtResource( 7 )

[node name="Player" parent="." instance=ExtResource( 1 )]
position = Vector2( 786.562, 416.507 )
rotation = -1.58822

[node name="UI" type="Panel" parent="."]
margin_left = 0.159088
margin_top = -0.681793
margin_right = 1537.16
margin_bottom = 39.3182
rect_scale = Vector2( 1, 1.12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Vie" type="Label" parent="UI"]
margin_left = 1271.81
margin_top = -12.4829
margin_right = 1381.81
margin_bottom = 22.5171
rect_scale = Vector2( 2, 2 )
text = "Nombre de vies :"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Vie_count" type="Label" parent="UI/Vie"]
margin_left = 112.0
margin_top = 8.55455
margin_right = 150.0
margin_bottom = 22.5546
rect_scale = Vector2( 1.2, 1.2 )
text = "0"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Lvl" type="Label" parent="UI"]
margin_left = 1.43584
margin_top = -11.1091
margin_right = 54.4358
margin_bottom = 23.8909
rect_scale = Vector2( 2, 2 )
text = "Level :"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Lvl_Count" type="Label" parent="UI/Lvl"]
margin_left = 52.0
margin_top = 9.0
margin_right = 164.0
margin_bottom = 23.0
rect_scale = Vector2( 1.2, 1.2 )
text = "0"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="enemies" type="Label" parent="UI"]
margin_left = 696.195
margin_top = 2.92125
margin_right = 727.195
margin_bottom = 16.9213
rect_scale = Vector2( 3, 3 )
text = "Salut"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Dead" type="Panel" parent="UI"]
margin_left = 530.182
margin_top = 267.558
margin_right = 1010.18
margin_bottom = 516.558

[node name="Text" type="Label" parent="UI/Dead"]
margin_top = 2.0
margin_right = 119.0
margin_bottom = 40.0
rect_scale = Vector2( 4, 4 )
text = "Tu es mort!"
align = 1
valign = 1
__meta__ = {
"_edit_lock_": true
}

[node name="Button" type="Button" parent="UI/Dead"]
margin_left = 104.0
margin_top = 140.0
margin_right = 374.0
margin_bottom = 212.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="UI/Dead/Button"]
margin_right = 135.0
margin_bottom = 37.0
rect_scale = Vector2( 2, 2 )
text = "Retourner au menu"
align = 1
valign = 1

[node name="Score" type="Node" parent="."]
script = ExtResource( 5 )
[connection signal="pressed" from="UI/Dead/Button" to="." method="_on_Button_pressed"]
